[package]
name = "array-concat"
version = "0.2.0"
authors = ["inspier <devdevin541@gmail.com>"]
edition = "2018"
description = "Macros for concatenating const arrays at compile time."
repository = "https://github.com/inspier/array-concat"
license = "MIT"
keywords = ["array", "concat"]
categories = ["data-structures", "no-std"]
readme = "README.md"
