[package]
name = "array-concat"
version = "0.5.5"
authors = ["inspier <devdevin541@gmail.com>"]
edition = "2018"
description = "Macros for concatenating const arrays."
repository = "https://github.com/inspier/array-concat"
license = "MIT"
keywords = ["array", "concat", "split"]
categories = ["data-structures", "no-std"]
readme = "README.md"

[features]
const_panic = []
